--- a/src/components/layout/HeaderMobile.astro
+++ b/src/components/layout/HeaderMobile.astro
@@ -7,23 +7,39 @@ const { logo, items, button } = Astro.props as HeaderProps;
 ---
 
 <script>
-  const buttonMenu = document.getElementById('buttonMenu');
-  const menu = document.getElementById('menu');
+  const buttonMenu = document.querySelector<HTMLButtonElement>('#buttonMenu');
+  const header = document.querySelector<HTMLHeadingElement>('#headerMobile');
+  const menu = document.querySelector<HTMLDivElement>('#menu');
 
   const toggleMenu = () => {
     menu?.classList.toggle('opacity-0');
   };
 
+  const addBackgroundMenu = () => {
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      header?.classList.add('bg-black/30');
+    } else {
+      header?.classList.remove('bg-black/30');
+    }
+  };
+
   buttonMenu?.addEventListener('click', toggleMenu);
+  window?.addEventListener('scroll', addBackgroundMenu);
 </script>
 
-<header class="fixed top-0 left-0 w-full flex items-center justify-between md:hidden p-5 z-20">
+<header
+  class="fixed top-0 left-0 w-full flex items-center justify-between md:hidden p-5 z-20"
+  id="headerMobile"
+>
   <Image {...logo.mobile} />
   <div
-    class="absolute top-20 left-1/2 w-[calc(100%_-_40px)] p-5 flex flex-col gap-5 items-center justify-center bg-white -translate-x-1/2"
+    class="absolute top-20 left-1/2 w-[calc(100%_-_40px)] p-5 flex flex-col gap-5 items-center justify-center bg-white -translate-x-1/2 opacity-0"
     id="menu"
   >
-    <div class="absolute -top-[25px] right-0 w-0 h-0 border-t-[25px] border-t-transparent border-r-[25px] border-white"></div>
+    <div
+      class="absolute -top-[25px] right-0 w-0 h-0 border-t-[25px] border-t-transparent border-r-[25px] border-white"
+    >
+    </div>
     <ul class="flex flex-col gap-5 items-center justify-center">
       {
         items.map((item) => (
@@ -50,6 +66,9 @@ const { logo, items, button } = Astro.props as HeaderProps;
     id="buttonMenu"
     class="cursor-pointer"
   >
-    <Icon name="hamburger" size={24} />
+    <Icon
+      name="hamburger"
+      size={24}
+    />
   </button>
 </header>
