--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,14 @@ import {
   SECTIONS_IMAGES,
   SECTION_TESTIMONIALS,
   FOOTER_CONTENT,
+  CARDS_IMAGES,
 } from '@content';
 import HeaderMobile from '@components/layout/HeaderMobile.astro';
 import Home from '@components/sections/Home.astro';
 import Section from '@components/sections/Section.astro';
 import SectionImage from '@components/sections/SectionImage.astro';
 import Card from '@components/ui/Card.astro';
+import CardImage from '@components/ui/CardImage.astro';
 import Footer from '@components/layout/Footer.astro';
 import Header from '@/components/layout/Header.astro';
 ---
@@ -27,11 +29,16 @@ import Header from '@/components/layout/Header.astro';
   <div class="grid grid-cols-1 md:grid-cols-2">
     {SECTIONS_IMAGES.map((item) => <SectionImage {...item} />)}
   </div>
-  <section class="bg-primary-white p-20 flex flex-col gap-5">
-    <h6 class="font-frauces font-bold uppercase text-center text-2xl">{SECTION_TESTIMONIALS.title}</h6>
-    <div class="grid grid-cols-cards gap-5">
+  <section class="bg-primary-white px-20 py-40 flex flex-col gap-20">
+    <h6 class="font-frauces font-bold uppercase text-center text-2xl">
+      {SECTION_TESTIMONIALS.title}
+    </h6>
+    <div class="grid grid-cols-cards gap-10">
       {SECTION_TESTIMONIALS.cards.map((item) => <Card {...item} />)}
     </div>
   </section>
+  <div class="grid grid-cols-2 md:grid-cols-4">
+    {CARDS_IMAGES.map((item) => <CardImage {...item} />)}
+  </div>
   <Footer {...FOOTER_CONTENT} />
 </Layout>
