--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -19,17 +19,20 @@ const { logo, items, button } = Astro.props as HeaderProps;
   window?.addEventListener('scroll', addBackgroundMenu);
 </script>
 
-<header class="fixed top-0 left-0 w-full hidden md:flex items-center justify-between gap-5 p-5 z-20" id="header">
+<header
+  class="fixed top-0 left-0 w-full hidden md:flex items-center justify-between gap-5 py-5 px-10 z-20 transition"
+  id="header"
+>
   <Image {...logo.desktop} />
-  <div class="flex items-center gap-8">
-    <ul class="flex items-center gap-8">
+  <div class="flex items-center gap-10">
+    <ul class="flex items-center gap-10">
       {
         items.map((item) => (
           <li>
             <a
               href={item.href}
               title={item.title}
-              class="font-barlow text-base font-medium text-white"
+              class="font-barlow text-base font-medium text-white hover:underline transition"
             >
               {item.label}
             </a>
@@ -40,7 +43,7 @@ const { logo, items, button } = Astro.props as HeaderProps;
     <a
       href={button.href}
       title={button.title}
-      class="py-4 px-6 bg-white rounded-full font-frauces font-bold uppercase text-sm tracking-wide"
+      class="py-4 px-6 bg-white hover:bg-white/30 hover:text-white rounded-full font-frauces font-bold uppercase text-sm tracking-wide transition"
       >{button.label}</a
     >
   </div>
