--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,11 +29,11 @@ import Header from '@/components/layout/Header.astro';
   <div class="grid grid-cols-1 md:grid-cols-2">
     {SECTIONS_IMAGES.map((item) => <SectionImage {...item} />)}
   </div>
-  <section class="bg-primary-white px-20 py-40 flex flex-col gap-20">
-    <h6 class="font-frauces font-bold uppercase text-center text-2xl">
+  <section class="bg-primary-white px-5 md:px-10 lg:px-20 py-40 flex flex-col gap-20">
+    <h6 class="font-frauces font-bold uppercase text-center text-xl text-secondary-blue tracking-[8px]">
       {SECTION_TESTIMONIALS.title}
     </h6>
-    <div class="grid grid-cols-cards gap-10">
+    <div class="grid grid-cols-cards gap-10 items-center justify-center">
       {SECTION_TESTIMONIALS.cards.map((item) => <Card {...item} />)}
     </div>
   </section>
