--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -8,14 +8,14 @@ const { logo, items, socialMedia } = Astro.props as FooterProps;
 
 <footer class="bg-primary-cyan p-10 flex flex-col gap-10 items-center justify-center">
   <Image {...logo} />
-  <ul class="flex flex-wrap gap-5 items-center justify-center">
+  <ul class="flex flex-wrap gap-10 items-center justify-center">
     {
       items.map((item) => (
         <li>
           <a
             href={item.href}
             title={item.title}
-            class="font-barlow text-primary-desaturated-cyan"
+            class="font-barlow text-primary-desaturated-cyan hover:text-white transition"
           >
             {item.label}
           </a>
@@ -23,18 +23,20 @@ const { logo, items, socialMedia } = Astro.props as FooterProps;
       ))
     }
   </ul>
-  <ul class="flex flex-wrap gap-5 items-center justify-center">
+  <ul class="flex flex-wrap gap-10 items-center justify-center">
     {
       socialMedia.map((item) => (
         <li>
           <a
             href={item.href}
             title={item.title}
-            class="inline-flex items-center justify-center"
+            aria-label={item.ariaLabel}
+            class="inline-flex items-center justify-center group"
           >
             <Icon
               name={item.icon}
               size={18}
+              class="text-primary-desaturated-cyan group-hover:text-white transition"
             />
           </a>
         </li>
