--- a/src/components/layout/HeaderMobile.astro
+++ b/src/components/layout/HeaderMobile.astro
@@ -33,14 +33,14 @@ const { logo, items, button } = Astro.props as HeaderProps;
 >
   <Image {...logo.mobile} />
   <div
-    class="absolute top-20 left-1/2 w-[calc(100%_-_40px)] p-5 flex flex-col gap-5 items-center justify-center bg-white -translate-x-1/2 opacity-0 transition shadow-md"
+    class="absolute top-20 left-1/2 w-[calc(100%_-_40px)] p-5 flex flex-col gap-7 items-center justify-center bg-white -translate-x-1/2 opacity-0 transition shadow-md"
     id="menu"
   >
     <div
       class="absolute -top-[25px] right-0 w-0 h-0 border-t-[25px] border-t-transparent border-r-[25px] border-white"
     >
     </div>
-    <ul class="flex flex-col gap-5 items-center justify-center">
+    <ul class="flex flex-col gap-7 items-center justify-center">
       {
         items.map((item) => (
           <li>
@@ -69,6 +69,7 @@ const { logo, items, button } = Astro.props as HeaderProps;
     <Icon
       name="hamburger"
       size={24}
+      class="text-white hover:text-white/30 transition"
     />
   </button>
 </header>
