--- a/src/components/sections/Home.astro
+++ b/src/components/sections/Home.astro
@@ -8,10 +8,10 @@ const bgClass = `bg-[url('${image.mobile}')] md:bg-[url('${image.desktop}')]`;
 ---
 
 <section
-  class={`w-full min-h-screen ${bgClass} flex flex-col gap-20 items-center justify-center bg-cover bg-center bg-no-repeat`}
+  class={`w-full min-h-screen ${bgClass} flex flex-col gap-24 items-center justify-center bg-cover bg-center bg-no-repeat`}
 >
   <h1
-    class="font-frauces text-4xl md:text-5xl md:text-[52px] tracking-[8px] text-white uppercase font-bold text-center"
+    class="font-frauces text-4xl md:text-5xl lg:text-6xl md:text-[52px] tracking-[8px] text-white uppercase font-bold text-center"
   >
     {title}
   </h1>
