--- a/src/components/ui/ArrowDown.astro
+++ b/src/components/ui/ArrowDown.astro
@@ -1,3 +1,27 @@
-<a href="">
-  <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
+---
+import type { ArrowDownProps } from '@types';
+
+const { href, title, ariaLabel } = Astro.props as ArrowDownProps;
+---
+
+<a
+  href={href}
+  title={title}
+  aria-label={ariaLabel}
+  class="hover:fill-white/30"
+>
+  <svg
+    width="36"
+    height="114"
+    xmlns="http://www.w3.org/2000/svg"
+    ><g
+      stroke="#FFF"
+      stroke-width="6"
+      fill="none"
+      fill-rule="evenodd"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      ><path d="M18 3v100M3 95.484l15 15 15-15"></path></g
+    ></svg
+  >
 </a>
