--- a/src/components/ui/CardImage.astro
+++ b/src/components/ui/CardImage.astro
@@ -6,4 +6,4 @@ const { image } = Astro.props as CardImageProps;
 const bgClass = `bg-[url('${image.mobile}')] md:bg-[url('${image.desktop}')]`;
 ---
 
-<div class={`${bgClass} bg-cover bg-no-repeat bg-center h-[240px] md:h-[340px] lg:h-[480px]`} />
+<div class={`${bgClass} bg-cover bg-no-repeat bg-center h-[240px] md:h-[340px] lg:h-[520px] 2xl:h-[560px]`} />
